--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,12 @@ docs/site/
 # committed for packages, but should be committed for applications that require a static
 # environment.
 Manifest.toml
+
+# Custom
+########
+# Legacy code
+legacy
+# generated images
+*.png
+*.jpg
+*.jpeg
